--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -15,10 +15,11 @@
             display: flex;
             flex-direction: column;
             align-items: center;
-            justify-content: space-between; /* Размещение элементов между собой */
-            height: 100vh; /* Минимальная высота на весь экран */
+            justify-content: flex-end; /* Изменено на flex-end для размещения элементов внизу */
+            height: 100vh;
             background-color: #121212;
             color: white;
+            padding-bottom: 20px; /* Отступ снизу */
         }
 
         #header {
@@ -31,23 +32,23 @@
         }
 
         #loading {
-            display: none; /* Изначально скрываем */
-            position: absolute; /* Сделаем абсолютное позиционирование */
-            top: 50%; /* Центрируем по верху */
-            left: 50%; /* Центрируем по левому краю */
-            transform: translate(-50%, -50%); /* Центрируем элемент относительно самого себя */
-            width: 100px; /* Ширина анимации загрузки */
-            height: 100px; /* Высота анимации загрузки */
-            z-index: 1000; /* Поверх других элементов */
+            display: none; 
+            position: absolute; 
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%); 
+            width: 100px; 
+            height: 100px; 
+            z-index: 1000; 
         }
 
         .loader {
-            border: 16px solid #f3f3f3; /* Светло-серый */
-            border-top: 16px solid #3498db; /* Синий */
+            border: 16px solid #f3f3f3; 
+            border-top: 16px solid #3498db; 
             border-radius: 50%;
-            width: 100%; /* Размер анимации загрузки */
-            height: 100%; /* Размер анимации загрузки */
-            animation: spin 2s linear infinite; /* Анимация вращения */
+            width: 100%; 
+            height: 100%; 
+            animation: spin 2s linear infinite; 
         }
 
         @keyframes spin {
@@ -58,99 +59,95 @@
         #result {
             margin-top: 10px;
             font-size: 18px;
-            display: none; /* Изначально скрываем результат */
-            text-align: center; /* Центрируем текст результата */
+            display: none; 
+            text-align: center; 
         }
 
         #result img {
-            width: 100%; /* Изображение адаптивное */
-            max-width: 200px; /* Максимальная ширина изображения */
-            height: auto; /* Автоматическая высота */
-            margin-top: 10px; /* Подгонка отступа */
+            width: 100%; 
+            max-width: 200px; 
+            height: auto; 
+            margin-top: 10px; 
         }
 
         #buttons {
             display: flex;
-            flex-direction: column; /* Вертикальная ориентация */
-            align-items: center;
-            margin-bottom: 20px; /* Отступ снизу для контакт бокса */
-            width: 100%; /* Ширина на всю доступную ширину */
-            max-width: 400px; /* Максимальная ширина */
+            flex-direction: column; /* Вертикальное расположение для мобильных */
+            align-items: center; /* Центрирование по горизонтали */
+            margin-top: 10px; /* Отступ сверху */
         }
 
         .button-container {
             display: flex;
-            justify-content: space-between; /* Равное расстояние между кнопками */
-            width: 100%; /* Ширина на всю доступную ширину */
-            margin-bottom: 10px; /* Отступ между кнопками и кнопкой результата */
+            justify-content: space-between;
+            width: 100%; /* Ширина на всю доступную область */
+            max-width: 300px; /* Максимальная ширина */
+            margin-bottom: 10px; /* Отступ между кнопками выбора и кнопкой получения результата */
         }
 
         button, select {
             font-size: 18px;
             padding: 16px;
-            margin: 5px;
             cursor: pointer;
             border: none;
             border-radius: 5px;
-            background-color: #888; /* Серый цвет для кнопок выбора */
+            background-color: #888; 
             color: white;
             flex: 1;
+            margin: 0 5px; /* Отступы между кнопками */
         }
 
         button:hover {
-            background-color: #777; /* Темно-серый цвет при наведении для кнопок выбора */
+            background-color: #777; 
         }
 
         button#showResultButton {
-            background-color: #4CAF50; /* Зеленый цвет для кнопки "Получить сигнал" */
-            height: 60px; /* Высота кнопки показать результат */
+            background-color: #4CAF50; 
+            height: 60px; 
             font-weight: bold;
-            font-size: 20px; /* Более крупный текст */
-            width: 100%; /* Займет всю ширину */
+            font-size: 20px; 
+            flex-basis: 100%; 
+            margin-top: 10px; /* Отступ сверху для кнопки получения результата */
         }
 
         button#showResultButton:hover {
-            background-color: #45a049; /* Темно-зеленый цвет при наведении */
+            background-color: #45a049; 
         }
 
         #contactBox {
-            background: rgba(255, 255, 255, 0.2); /* Полупрозрачный фон */
-            padding: 10px; /* Отступы внутри */
-            border-radius: 5px; /* Скругление углов */
-            display: flex; /* Используем Flexbox */
-            align-items: center; /* Центрируем по вертикали */
-            justify-content: center; /* Центрируем по горизонтали */
-            margin-top: 10px; /* Отступ сверху для отделения от других элементов */
-            width: 100%; /* Ширина на всю доступную ширину */
-            max-width: 400px; /* Максимальная ширина */
+            background: rgba(255, 255, 255, 0.2); 
+            padding: 10px; 
+            border-radius: 5px; 
+            display: flex; 
+            align-items: center; 
+            justify-content: center; 
+            margin-top: 10px; /* Отступ между кнопкой получения результата и контакт боксом */
+            width: 100%; 
+            max-width: 300px; 
         }
 
         #contactBox img {
-            margin-right: 5px; /* Отступ от изображения к тексту */
+            margin-right: 5px; 
         }
 
         #contactBox span {
-            font-size: 24px; /* Крупный текст */
-            font-weight: bold; /* Жирный текст */
-            color: white; /* Цвет текста */
+            font-size: 24px; 
+            font-weight: bold; 
+            color: white; 
         }
 
         @media (max-width: 600px) {
-            body {
-                font-size: 16px; /* Меньший размер шрифта для мобильных */
-            }
-
             #buttons {
-                flex-direction: column; /* Вертикально расположенные кнопки на мобильных */
+                flex-direction: column; 
             }
 
             button, select {
-                width: 100%; /* Кнопки и селекты занимают полную ширину */
-                margin: 5px 0; /* Отступы между элементами */
+                width: 100%; 
+                margin: 5px 0; 
             }
 
             #result {
-                font-size: 16px; /* Меньший размер текста для результата */
+                font-size: 16px; 
             }
         }
     </style>
@@ -203,8 +200,8 @@
     </div>
 
     <script>
-        let lastResultTime = 0; // Время последнего получения результата (в миллисекундах)
-        const resultCooldown = 30000; // 30 секунд (в миллисекундах)
+        let lastResultTime = 0; 
+        const resultCooldown = 30000; 
 
         function displayLoading() {
             const loadingDiv = document.getElementById("loading");
@@ -231,28 +228,27 @@
             }
 
             lastResultTime = Date.now();
-            loadingDiv.style.display = "flex"; // Показываем загрузку
-            resultDiv.style.display = "none"; // Скрываем результат
-            contactBox.style.display = "flex"; // Убедимся, что контакт-бокс виден
+            loadingDiv.style.display = "flex"; 
+            resultDiv.style.display = "none"; 
+            contactBox.style.display = "flex"; 
 
-            // Задержка 1 секунда
             setTimeout(() => {
-                loadingDiv.style.display = "none"; // Скрываем блок загрузки
-                const randomPercentage = Math.floor(Math.random() * (98 - 86 + 1)) + 86; // Рандомное число от 86 до 98
-                const isUpward = Math.random() < 0.5; // 50% вероятность
+                loadingDiv.style.display = "none"; 
+                const randomPercentage = Math.floor(Math.random() * (98 - 86 + 1)) + 86; 
+                const isUpward = Math.random() < 0.5; 
 
                 const resultImage = document.getElementById("resultImage");
                 const resultText = document.getElementById("resultText");
 
                 if (isUpward) {
-                    resultImage.src = "images/green.jpg"; // Зелёная стрелка вверх
+                    resultImage.src = "images/green.jpg"; 
                 } else {
-                    resultImage.src = "https://upload.wikimedia.org/wikipedia/commons/d/d4/Down_arrow_icon.png"; // Красная стрелка вниз
+                    resultImage.src = "https://upload.wikimedia.org/wikipedia/commons/d/d4/Down_arrow_icon.png"; 
                 }
 
                 resultText.innerText = `Время получения сигнала: ${formattedDate}\nВероятность проходимости сигнала: ${randomPercentage}%\nСигнал сгенерирован с помощью нейросети`;
-                resultDiv.style.display = "block"; // Показываем блок результата
-            }, 1000); // Задержка 1 секунда
+                resultDiv.style.display = "block"; 
+            }, 1000); 
         }
 
         document.getElementById("showResultButton").onclick = displayLoading;
