--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -30,6 +30,11 @@
             text-align: center;
             text-shadow: 0 0 20px rgba(255, 215, 0, 0.8);
         }
+        
+        #header h1 {
+            font-size: 48px; /* Увеличен размер текста заголовка */
+            margin: 0; /* Убираем отступы вокруг заголовка */
+        }
 
         #loading {
             display: none; 
