--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -23,6 +23,8 @@
         }
 
         #header {
+            position: fixed; /* Это позволяет закрепить шапку */
+            top: 0; /* Устанавливает её в верхней части страницы */
             background-color: #121212;
             color: #FFD700;
             padding: 20px;
