--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -76,13 +76,14 @@
 
         #result img {
             width: 100%; 
-            max-width: 400px; 
+            max-width: 200px; 
             height: auto; 
             margin-top: 10px; 
         }
 
         #resultText {
             font-weight: bold; /* Делает текст более жирным */
+            white-space: pre-line; /* Позволяет использовать переносы строк */
         }
 
         #contactBox {
