--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -19,7 +19,6 @@
             height: 100vh;
             background-color: #121212;
             color: white;
-            padding-bottom: 20px;
             position: relative;
             overflow: hidden;
         }
@@ -64,12 +63,12 @@
         }
 
         #result {
-            margin-top: 10px;
+            margin-top: 20px; /* Увеличен отступ сверху для лучшего расположения */
             font-size: 18px;
             display: none; 
             text-align: center; 
             position: absolute; 
-            top: 50%; 
+            top: 30%; /* Изменено на 30%, чтобы поднять результат ближе к шапке */
             left: 50%; 
             transform: translate(-50%, -50%); 
         }
