--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -63,12 +63,12 @@
         }
 
         #result {
-            margin-top: 20px; /* Увеличен отступ сверху для лучшего расположения */
+            margin-top: 20px; 
             font-size: 18px;
             display: none; 
             text-align: center; 
             position: absolute; 
-            top: 50%; /* Изменено на 30%, чтобы поднять результат ближе к шапке */
+            top: 40%; 
             left: 50%; 
             transform: translate(-50%, -50%); 
         }
@@ -105,7 +105,7 @@
             display: flex; 
             align-items: center; 
             justify-content: center; 
-            margin-top: 10px; 
+            margin: 5px 0; /* Уменьшенные отступы сверху и снизу */
             width: 100%; 
             max-width: 300px; 
         }
@@ -130,7 +130,7 @@
             max-width: 300px; 
             font-size: 24px; 
             cursor: pointer; 
-            margin-top: 10px; 
+            margin: 5px 0; /* Уменьшенные отступы сверху и снизу */
         }
 
         #showResultButton:hover {
@@ -138,17 +138,17 @@
         }
 
         .hacker-text {
-            position: absolute; /* Изменено на absolute для лучшего позиционирования */
-            top: 50%; /* Позиционирование сверху вниз */
-            left: 50%; /* Центрирование текстового блока */
-            transform: translate(-50%, -50%); /* Центрирование текста */
-            color: rgba(0, 255, 0, 0.5); /* Уменьшена прозрачность */
+            position: absolute;
+            top: 50%; 
+            left: 50%; 
+            transform: translate(-50%, -50%); 
+            color: rgba(0, 255, 0, 0.5); 
             font-family: monospace;
             white-space: pre;
             overflow: hidden;
             pointer-events: none;
-            text-align: center; /* Центрирование текста */
-            margin: 20px 0; /* Отступы сверху и снизу */
+            text-align: center; 
+            margin: 20px 0; 
         }
 
         @keyframes flicker {
@@ -167,7 +167,7 @@
         <h1>GURUHACK</h1>
     </div>
 
-    <div class="hacker-text" id="hackerText"></div> <!-- Переместили текст сюда -->
+    <div class="hacker-text" id="hackerText"></div> 
 
     <div id="loading">
         <div class="loader"></div>
@@ -230,7 +230,7 @@
 
         function clearHackerAnimation(interval) {
             clearInterval(interval);
-            document.getElementById("hackerText").innerHTML = ''; // Очищаем текст
+            document.getElementById("hackerText").innerHTML = ''; 
         }
 
         function displayLoading() {
