--- a/SIGNALTRADE/index.html
+++ b/SIGNALTRADE/index.html
@@ -268,7 +268,7 @@
                 const category3 = document.getElementById("category3").children[0];
 
                 const isUpward = Math.random() < 0.5; 
-                resultImage.src = isUpward ? "images/green.jpg" : "https://upload.wikimedia.org/wikipedia/commons/d/d4/Down_arrow_icon.png"; 
+                resultImage.src = isUpward ? "images/green.jpg" : "images/red.jpg"; 
 
                 category1.innerText = `Рекомендуемая пара: ${randomPair}`;
                 category2.innerText = `Время получения сигнала: ${formattedTime}`;
