--- a/Aviator/index.html
+++ b/Aviator/index.html
@@ -22,7 +22,7 @@
         </div>
       <div class="top-content">
         <img draggable="false" src="./static/Aviator/resource/logo.svg" alt="logo" class="logo-game">
-        <p class="name-bot">@luckyguruhack</p>  <!-- Thymeleaf expression -->
+        <p class="name-bot">@LUCKYGURUHACK</p>  <!-- Thymeleaf expression -->
       </div>
       <div class="button-game">
         <a href="https://1weoky.life/casino/list?open=register&p=1fv2" class="game-here" target="_blank">GAME HERE</a>
