--- a/Brawlpirates/index.html
+++ b/Brawlpirates/index.html
@@ -326,7 +326,7 @@
     <div class="button-container">
         <button class="start-button" onclick="openModal()">START</button>
         <div class="business-name">
-            Brawl Pirates
+            GURUHACK
         </div>
     </div>
     <div id="modal">
