--- a/Mines/index_en.html
+++ b/Mines/index_en.html
@@ -716,7 +716,7 @@
 		<a target="_blank2">
 			<button class="button2">
 				<img class="tg_icon" src="images/Telegram_logo.svg">
-				@luckyguruhack
+				@Luckyguruhack
 			</button>
 		</a>
 		<script src="js/telegram-web-app.js"></script>
