--- a/DEVI-MINES/index.html
+++ b/DEVI-MINES/index.html
@@ -703,8 +703,8 @@
 					<img src="./static/7.png" alt="Mines Preview">
 					<div class="game-info">
 						<h3>Aviator</h3>
-						<a href="">
-							<button>SOON</button>
+						<a href="https://minesguruhack.github.io/GuruHack/AviaD/">
+							<button>Open</button>
 						</a>
 					</div>
 				</div>
