--- a/DEMOMENUDEVI/index.html
+++ b/DEMOMENUDEVI/index.html
@@ -669,25 +669,9 @@
 				</div>
 			</div>
 			<div class="game">
-				<img src="./static/4.png" alt="Mines Preview">
-				<div class="game-info">
-					<h3>Royal Mines</h3>
-					<button onclick="showGameModal()">Open</button>
-					</a>
-				</div>
-			</div>
-			<div class="game">
 				<img src="./static/5.png" alt="Mines Preview">
 				<div class="game-info">
 					<h3>Goal (Spribe)</h3>
-					<button onclick="showGameModal()">Open</button>
-					</a>
-				</div>
-			</div>
-			<div class="game">
-				<img src="./static/6.png" alt="Mines Preview">
-				<div class="game-info">
-					<h3>Bombucks</h3>
 					<button onclick="showGameModal()">Open</button>
 					</a>
 				</div>
@@ -721,8 +705,8 @@
 				font-size: 16px;
 				color: #666;
 				line-height: 1.5;
-				margin-top: 10px;">To access signals, you need to synchronize your account in the bot. To do this, open the bot, send the command /start and follow the instructions for registration. After successful synchronization, you will be able to use all available signals. 
-			   If you encounter any difficulties, you can always contact support through the bot, and we will help you.</p>
+				margin-top: 10px;">To access signals, you need to synchronize your account in the bot. To do this, simply follow the instructions. After successful synchronization, you will be able to use all available signals. 
+If you encounter any difficulties, you can always contact support through the bot, and we will help you.</p>
 			<p style="
 				font-size: 16px;
 				color: #666;
