--- a/BURJRX/index.html
+++ b/BURJRX/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="rocket">
-         <button class="button2" target="_blank2" onclick="link_here.com">@LUCKYGURUHACKBOT</button>
+         <button class="button2" target="_blank2" onclick="link_here.com">@LUCKYGURUHACK</button>
         <div class="loader2"></div>
         <div class="visible">
             <iframe id="myIframe" src="https://100hp.app/rocketx/onewin/" onload="hideElements()" scrolling="no"></iframe>
