--- a/WEB1/index.html
+++ b/WEB1/index.html
@@ -710,7 +710,7 @@
 		    <div class="game">
 			<img src="./static/10.png" alt="Mines Preview">
 			<div class="game-info">
-				<h3>Balloon (smartsoft)</h3>
+				<h3>Balloon </h3>
 				<a href="https://minesguruhack.github.io/GuruHack/baye/">
 					<button>Open</button>
 				   </a>
