--- a/baba/index.html
+++ b/baba/index.html
@@ -61,7 +61,7 @@
         <div class="buttons-container">
             <button id="predictButton">Get Signal</button>
             <a href="https://minesguruhack.github.io/GuruHack/WEB1/" id="backButton" class="button">Back</a>
-            <a href="https://t.me/+RnRU50oNRsIwNzU0" id="telegramButton" class="button">
+            <a href="https://t.me/minesguruhack" id="telegramButton" class="button">
                 <img src="tg.png" alt="Telegram" class="tg-icon">
                 <span>@minesguruhack</span>
             </a>
