--- a/hot/index.html
+++ b/hot/index.html
@@ -11,7 +11,7 @@
     <div class="particles-container" id="particles"></div>
     
     <div class="container">
-        <h1>Hotline</h1>
+        <h1>GURUHACK</h1>
         <div class="roulette-wrapper">
             <div class="arrow-container arrow-top">
                 <div class="arrow" id="arrowTop"></div>
