--- a/BG1W/index.html
+++ b/BG1W/index.html
@@ -695,7 +695,7 @@ text-shadow: 0 0.25px 0 #ccc, 0 0.5px 0 #ccc, 0 0.75px 0 #ccc, 0 1px 0 #ccc,
 		</div>
 
 		<div style="text-align: center">
-			<button id="explodeButton">GET SIGNAL</button>
+			<button id="explodeButton">OBTENER SEÑAL</button>
 		</div>
 		<a target="_blank2">
 			<button class="button2">
