--- a/BGAV/index.html
+++ b/BGAV/index.html
@@ -11,7 +11,7 @@
     <div class="container">
       <img class="pers-animate" src="./static/Aviator/resource/plane top.svg" alt="plane">
       <div class="print-signal-button" id="get-signal" style="z-index: 11;">
-        <span >GET<br>SIGNAL</span>
+        <span >OBTENER<br>SEÑAL</span>
       </div>
       <div class="print-signal" style="position: absolute;">
         <span id="print-signal"></span>
