--- a/BGBABA/index.html
+++ b/BGBABA/index.html
@@ -59,8 +59,8 @@
     </div>
     <div class="controls">
         <div class="buttons-container">
-            <button id="predictButton">Get Signal</button>
-            <a href="https://t.me/bgSOFTware" id="backButton" class="button">Back</a>
+            <button id="predictButton">OBTENER SEÑAL</button>
+            <a href="https://t.me/bgSOFTware" id="backButton" class="button">ATRÁS</a>
             <a href="https://t.me/bgsoftware" id="telegramButton" class="button">
                 <img src="tg.png" alt="Telegram" class="tg-icon">
                 <span>@BGSOFT</span>
