--- a/BGGO/index.html
+++ b/BGGO/index.html
@@ -269,8 +269,8 @@
 
     <!-- Контейнер для кнопок play и reset -->
     <div class="button-container" id="buttonContainer">
-        <button class="play-button">Game</button>
-        <button class="reset-button">Reset</button>
+        <button class="play-button">Jugar</button>
+        <button class="reset-button">Reiniciar</button>
         
     </div>
 
