--- a/BGHOT/index.html
+++ b/BGHOT/index.html
@@ -30,9 +30,9 @@
         </div>
         <div class="result" id="result"></div>
         <div class="button-container">
-            <button class="spin-button" onclick="spin()" id="spinButton">Get Signal</button>
+            <button class="spin-button" onclick="spin()" id="spinButton">OBTENER SEÑAL</button>
             <a href="https://t.me/BGSOFTWARE" class="back-button-link">
-                <button class="back-button" id="backButton">Back</button>
+                <button class="back-button" id="backButton">ATRÁS</button>
             </a>
             <a href="https://t.me/luckyguruhack" class="dynasty-button-link">
                 <button class="dynasty-button" id="dynastyButton">
