--- a/BGISLAND/index.html
+++ b/BGISLAND/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="game-container">
-        <a href="https://t.me/BGSOFTWARE" class="back-button" id="back-button">Back</a>
+        <a href="https://t.me/BGSOFTWARE" class="back-button" id="back-button">ATRÁS</a>
         <a href="https://t.me/BGSOFTWARE" class="telegram-button" id="telegram-button">
             <img src="tg.png" alt="Telegram" class="telegram-icon">
             <span>@BGSOFTWARE</span>
