--- a/BGMI/index.html
+++ b/BGMI/index.html
@@ -539,7 +539,7 @@
         <button class="restart-button">
             <img src="static/miminesrestart.png" alt="Restart" />
         </button>
-        <button class="bet-button">GET SIGNAL</button>
+        <button class="bet-button">OBTENER SEÑAL</button>
         
     </div>
     <a target="_blank2">
