--- a/BGFX/index.html
+++ b/BGFX/index.html
@@ -348,7 +348,7 @@
             <img src="static/1.png" alt="Footballer" class="footballer hidden" id="footballer">
         </div>
 
-        <button class="button" onclick="revealFootballer()">Start Hack</button>
+        <button class="button" onclick="revealFootballer()">OBTENER SEÑAL</button>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
 <script>
     function triggerHapticFeedback() {
