--- a/WEB1/index.html
+++ b/WEB1/index.html
@@ -692,8 +692,8 @@
 			<div class="game">
 				<img src="./static/8.png" alt="Mines Preview">
 				<div class="game-info">
-					<h3>COLOR</h3>
-					<a href="https://minesguruhack.github.io/GuruHack/COLORWEB/">
+					<h3>Football X</h3>
+					<a href="https://minesguruhack.github.io/GuruHack/FX/">
 						<button>Open</button>
 					</a>
 				</div>
@@ -710,7 +710,7 @@
 		    <div class="game">
 			<img src="./static/10.png" alt="Mines Preview">
 			<div class="game-info">
-				<h3>Balloon </h3>
+				<h3>Balloon (smartsoft)</h3>
 				<a href="https://minesguruhack.github.io/GuruHack/baye/">
 					<button>Open</button>
 				   </a>
